@@ -25,6 +25,8 @@
 #include <iostream>
 #include <map>
 
+unsigned input_blocker::instance_count = 0; //static initialization
+
 SDLKey sdl_keysym_from_name(std::string const &keyname)
 {
 	static bool initialized = false;
