@@ -102,6 +102,7 @@ Version 1.3-svn:
    * fix the completion when controlling multiple sides (bug #8101, patch #653)
    * smarter focus handling when user input is irrelevant to the current focus
      but relevant to another widget
+   * fix the "keylogger" effect when joining the MP Lobby
  * friends list
    * added a friend list in MP lobby, they will display a special icon in lobby,
      and you can be warned when they join the lobby even when not receiving
